[package]
name = "Kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
fern = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
